simulatron-salt/src/lib/snapshots/simulatron_salt__parser__tests__hello_world.snap
---
source: src/lib/parser.rs
expression: output

---
Program@0..337
  Line@0..33
    Comment@0..32 "// Number of columns  ..."
    Newline@32..33 "\n"
  Line@33..47
    ConstDecl@33..46
      KwConst@33..38 "const"
      Whitespace@38..39 " "
      Identifier@39..43 "COLS"
      Literal@43..46
        Whitespace@43..44 " "
        IntLiteral@44..46 "80"
    Newline@46..47 "\n"
  Line@47..48
    Newline@47..48 "\n"
  Line@48..87
    Comment@48..86 "// Row and column to  ..."
    Newline@86..87 "\n"
  Line@87..100
    ConstDecl@87..99
      KwConst@87..92 "const"
      Whitespace@92..93 " "
      Identifier@93..96 "ROW"
      Literal@96..99
        Whitespace@96..97 " "
        IntLiteral@97..99 "12"
    Newline@99..100 "\n"
  Line@100..113
    ConstDecl@100..112
      KwConst@100..105 "const"
      Whitespace@105..106 " "
      Identifier@106..109 "COL"
      Literal@109..112
        Whitespace@109..110 " "
        IntLiteral@110..112 "32"
    Newline@112..113 "\n"
  Line@113..114
    Newline@113..114 "\n"
  Line@114..153
    Comment@114..152 "// Base address of di ..."
    Newline@152..153 "\n"
  Line@153..173
    ConstDecl@153..172
      KwConst@153..158 "const"
      Whitespace@158..159 " "
      Identifier@159..166 "DISPLAY"
      Literal@166..172
        Whitespace@166..167 " "
        IntLiteral@167..172 "0x240"
    Newline@172..173 "\n"
  Line@173..174
    Newline@173..174 "\n"
  Line@174..215
    DataDecl@174..214
      KwStatic@174..180 "static"
      DataType@180..189
        Whitespace@180..181 " "
        KwByte@181..185 "byte"
        OpenSquare@185..186 "["
        IntLiteral@186..188 "13"
        CloseSquare@188..189 "]"
      Whitespace@189..190 " "
      Identifier@190..198 "greeting"
      ArrayLiteral@198..214
        Whitespace@198..199 " "
        StringLiteral@199..214 "\"Hello, World!\""
    Newline@214..215 "\n"
  Line@215..216
    Newline@215..216 "\n"
  Line@216..222
    Label@216..221
      Identifier@216..220 "main"
      Colon@220..221 ":"
    Newline@221..222 "\n"
  Line@222..268
    Instruction@222..234
      Identifier@222..226 "copy"
      Operand@226..230
        Whitespace@226..227 " "
        Identifier@227..230 "r0b"
      Operand@230..234
        Whitespace@230..231 " "
        Identifier@231..234 "ROW"
    Whitespace@234..242 "        "
    Comment@242..267 "// Calculate the addr ..."
    Newline@267..268 "\n"
  Line@268..281
    Instruction@268..280
      Identifier@268..272 "mult"
      Operand@272..275
        Whitespace@272..273 " "
        Identifier@273..275 "r0"
      Operand@275..280
        Whitespace@275..276 " "
        Identifier@276..280 "COLS"
    Newline@280..281 "\n"
  Line@281..292
    Instruction@281..291
      Identifier@281..284 "add"
      Operand@284..287
        Whitespace@284..285 " "
        Identifier@285..287 "r0"
      Operand@287..291
        Whitespace@287..288 " "
        Identifier@288..291 "COL"
    Newline@291..292 "\n"
  Line@292..307
    Instruction@292..306
      Identifier@292..295 "add"
      Operand@295..298
        Whitespace@295..296 " "
        Identifier@296..298 "r0"
      Operand@298..306
        Whitespace@298..299 " "
        Identifier@299..306 "DISPLAY"
    Newline@306..307 "\n"
  Line@307..332
    Instruction@307..331
      Identifier@307..316 "blockcopy"
      Operand@316..319
        Literal@316..319
          Whitespace@316..317 " "
          IntLiteral@317..319 "13"
      Operand@319..322
        Whitespace@319..320 " "
        Identifier@320..322 "r0"
      Operand@322..331
        Whitespace@322..323 " "
        Identifier@323..331 "greeting"
    Newline@331..332 "\n"
  Line@332..337
    Instruction@332..336
      Identifier@332..336 "halt"
    Newline@336..337 "\n"
  Line@337..337

