simulatron-salt/src/lib/snapshots/simulatron_salt__parser__tests__minimal.snap
---
source: src/lib/parser.rs
expression: output

---
Program@0..4
  Line@0..4
    Instruction@0..4
      Identifier@0..4 "halt"

